feat(client): add read-only doctor command